created separated profile for Travis CI