@@ -182,6 +182,23 @@
             </build>
         </profile>
         <profile>
+            <id>travis</id>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <version>2.12</version>
+                            <configuration>
+                                <argLine>-server -Xms512m -Xmx512m -Xss1m -XX:NewSize=384m -XX:PermSize=128m -XX:MaxPermSize=128m -XX:+TieredCompilation -XX:+UseParNewGC -XX:+UseNUMA -XX:+UseCondCardMark -XX:-UseBiasedLocking -XX:+AlwaysPreTouch</argLine>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+            </build>
+        </profile>
+        <profile>
             <id>jrockit64</id>
             <build>
                 <pluginManagement>
